Update friendship controller to add the pending requests method logic to have it sent to the views the name of the friends which have the pending requests sent. Update the views to display the names

--- a/app/views/friendships/pending_requests.html.erb
+++ b/app/views/friendships/pending_requests.html.erb
@@ -1,11 +1,11 @@
 <h1>Friends Requests</h1>
 
 <section class="users-section">
-	<%= @pending_arr.each do |pending| %>
-		<ul class="users-list">
+	<ul class="users-list">
+		<% @pending.each do |friend| %>
 			<li>
-				Name: <%= pending %>
+				Name: <%= friend %>	
 			</li>
-		</ul>
-	<% end %>
+		<% end %>
+  </ul>
 </section>
