--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <%= menu_link_to 'All users', users_path %>
         </div>
         <div class="menu-item">
-        <%= menu_link_to 'All friends requests', peding_requests_path %>
+        <%= menu_link_to 'All friends requests', pending_requests_path %>
       </div>
       </div>
       <% if current_user %>
