Update friendship controller create method to put a guard clause stopping current user befriending himself. Add the update and destroy methods forthe friendship controller and add the code in the view to have that functionality completely

--- a/app/views/friendships/pending_requests.html.erb
+++ b/app/views/friendships/pending_requests.html.erb
@@ -1,11 +1,13 @@
-<h1>Friends Requests</h1>
+<h1>Pending Requests</h1>
 
 <section class="users-section">
 	<ul class="users-list">
 		<% @pending.each do |friend| %>
-			<li>
-				Name: <%= friend %>	
-			</li>
+			<% if !friend.nil? %>
+				<li>
+					Name: <%= friend.name %>	
+				</li>
+			<% end %>
 		<% end %>
   </ul>
 </section>
