Update friendship controller create to add a guard clause to avoid current user send a friend request to a current friend. Update the user view to hide the send request link for an actual friend. Update the timeline posts private method in post controller to have the active record query searching for friends and current user ids to only show the friends and user id in the timeline route

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,9 +1,11 @@
 <% unless current_user == user %>
-<li>
-  Name: <%= user.name %>
-  <span class="profile-link">
-    <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
-    <%= link_to 'Send invitation', friendships_path(user), method: :post, class: 'profile-link' %>
-  </span>
-</li>
+  <li>
+    Name: <%= user.name %>
+    <span class="profile-link">
+      <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
+      <% unless current_user.friend?(user) %>
+        <%= link_to 'Send invitation', friendships_path(user), method: :post, class: 'profile-link' %>
+      <% end %>
+    </span>
+  </li>
 <% end %>
