--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,16 @@
         <div class="menu-item">
           <%= menu_link_to 'See all your friends requests', friends_requests_path %>
         </div>
+        <div class="menu-item">
+          <%= menu_link_to 'See all your friends', friends_list_path %>
+        </div>        
 
       </div>
+
       <% if current_user %>
+        <div>
+          <%= link_to current_user.name, user_path(current_user), class: 'nav_user profile-link' %>
+        </div>
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign in', user_session_path %>
