Add integration test for sending and accepting invitation

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <section class="user-section">
   <h2><%= "Name: #{@user.name}" %></h2>
   <% unless current_user.friend?(@user) || current_user.pending_friends.include?(@user) %>
-    <%= link_to 'Send invitation', friendships_path(@user), method: :post, class: 'profile-link' %>
+    <%= link_to 'Send invitation', friendships_path(@user), method: :post, class: 'profile-link invit_btn' %>
   <% end %>
   <article class="timeline">
     <h3>Recent posts:</h3>
