Update user partial and user show view to remove the logic and added to user module helper. Change the display when user sent invitation to show pending invite after user a send it to user b. Update user partial to display the accept or reject friendship. Update the user partial and user show view to add the links for accepting or rejecting a friendship invitation

--- a/app/views/friendships/pending_requests.html.erb
+++ b/app/views/friendships/pending_requests.html.erb
@@ -3,7 +3,7 @@
 <section class="users-section">
 	<ul class="users-list">
 		<% @pending.each do |friend| %>
-			<% if !friend.nil? %>
+			<% unless friend.nil? %>
 				<li>
 					Name: <%= friend.name %>	
 				</li>
