--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,13 @@
 <section class="user-section">
   <h2><%= "Name: #{@user.name}" %></h2>
-  <% unless current_user.friend?(@user) || current_user.pending_friends.include?(@user) %>
+  <% if is_pending?(current_user, @user) %>
+    <span> Pending Invite </span>
+  <% elsif are_inverted_friends?(current_user, @user) %>
+    <span> 
+      <%= link_to 'Accept Friendship', friendship_path(@user.id), method: :put, class: 'profile-link accept_btn' %>
+      <%= link_to 'Reject Friendship', friendship_path(@user.id), method: :delete, class: 'profile-link reject_btn' %>
+    </span>    
+  <% elsif are_friends?(current_user, @user) %>
     <%= link_to 'Send invitation', friendships_path(@user), method: :post, class: 'profile-link invit_btn' %>
   <% end %>
   <article class="timeline">
