--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
     Name: <%= user.name %>
     <span class="profile-link">
       <%= link_to 'See Profile',  user_path(user), class: 'profile-link invit_btn' %>
-      <% if is_pending?(current_user, user) %>
+      <% if pending?(current_user, user) %>
         <span>Pending Invite</span>
       <% elsif are_inverted_friends?(current_user, user) %>
         <span> 
