--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
           <%= menu_link_to 'All users', users_path %>
         </div>
         <div class="menu-item">
-          <%= menu_link_to 'Se all your pending requests', pending_requests_path %>
+          <%= menu_link_to 'Pending requests', pending_requests_path %>
         </div>
         <div class="menu-item">
-          <%= menu_link_to 'See all your friends requests', friends_requests_path %>
+          <%= menu_link_to 'Friends requests', friends_requests_path %>
         </div>
         <div class="menu-item">
-          <%= menu_link_to 'See all your friends', friends_list_path %>
+          <%= menu_link_to 'All friends', friends_list_path %>
         </div>        
 
       </div>
