Add frendship logic to pending and friend request pages

--- a/app/views/friendships/friends_list.html.erb
+++ b/app/views/friendships/friends_list.html.erb
@@ -2,10 +2,17 @@
 
 <section class="users-section">
 	<ul class="users-list">
-		<% @all_friends.each do |friend| %>
-			<li>
-			Name: <%= friend.name %>
-			</li>
+		<% @all_user.each do |friend| %>
+			<% unless current_user == friend %>
+				<li>
+
+					<% if friendship_check(current_user, friend) == "friends" %>
+							Name: <%= friend.name %>
+							<%= link_to 'See Profile',  user_path(friend), class: 'profile-link invit_btn' %>
+					<% end %>
+				</li>
+			<% end %>
 		<% end %>
 	</ul>
 </section>
+
