Fix some rubocop issues

--- a/app/views/friendships/pending_requests.html.erb
+++ b/app/views/friendships/pending_requests.html.erb
@@ -7,7 +7,7 @@
 				<li> 
 				Name: 
 				<%= friend.name %>
-				<span> Pending Invite</span></li>
+				<span class="profile-link"> Pending Invite</span></li>
 			<% end %>
 		<% end %>
   </ul>
