--- a/app/views/friendships/friends_requests.html.erb
+++ b/app/views/friendships/friends_requests.html.erb
@@ -7,7 +7,7 @@
 				<% if friendship_check(current_user, friend)[0] == "Accecp_reject" %>
 					Name: <%= friend.name %>
 					<%= link_to 'Accept Friendship', friendship_path(friendship_check(current_user, friend)[1].id), method: :put, class: 'profile-link accept_btn' %>
-					<%= link_to 'Reject Friendship', friendship_path(friend.id), method: :delete, class: 'profile-link reject_btn' %>
+					<%= link_to 'Reject Friendship', friendship_path(friendship_check(current_user, friend)[1].id), method: :delete, class: 'profile-link reject_btn' %>
 				<% end %>
 			</li>
 		<% end %>
