--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,7 +5,7 @@
       <%= link_to 'See Profile',  user_path(user), class: 'profile-link invit_btn' %>
       <% if friendship_check(current_user, user)[0] == "Accecp_reject" %>
         <%= link_to 'Accept Friendship', friendship_path(friendship_check(current_user, user)[1].id), method: :put, class: 'profile-link accept_btn' %>
-		    <%= link_to 'Reject Friendship', friendship_path(user.id), method: :delete, class: 'profile-link reject_btn' %>
+		    <%= link_to 'Reject Friendship', friendship_path(friendship_check(current_user, user)[1].id), method: :delete, class: 'profile-link reject_btn' %>
       <% elsif friendship_check(current_user, user) == "pending" %>
          <span>Pending Invite</span>
       <% elsif friendship_check(current_user, user) == "send_invit" %>
