--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <%= menu_link_to 'Friends requests', friends_requests_path %>
         </div>
         <div class="menu-item">
-          <%= menu_link_to 'All friends', friends_list_path %>
+          <%= menu_link_to 'My friends', friends_list_path %>
         </div>        
 
       </div>
