--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <h2><%= "Name: #{@user.name}" %></h2>
   <span class="profile-link">
 		<% unless current_user == @user %>
-      <% if friendship_check(current_user, @user)[0] == "Accecp_reject" %>
+      <% if friendship_check(current_user, @user)[0] == "Accept_reject" %>
         <%= link_to 'Accept Friendship', friendship_path(friendship_check(current_user, @user)[1].id), method: :put, class: 'profile-link accept_btn' %>
 		    <%= link_to 'Reject Friendship', friendship_path(friendship_check(current_user, @user)[1].id), method: :delete, class: 'profile-link reject_btn' %>
       <% elsif friendship_check(current_user, @user) == "pending" %>
