--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 		    <%= link_to 'Reject Friendship', friendship_path(friendship_check(current_user, @user)[1].id), method: :delete, class: 'profile-link reject_btn' %>
       <% elsif friendship_check(current_user, @user) == "pending" %>
          <span>Pending Invite</span>
-      <% elsif friendship_check(current_user, @user) == "send_invit" %>
+      <% elsif friendship_check(current_user, @user) == "send_invite" %>
         <%= link_to 'Send invitation', friendships_path(@user), method: :post, class: 'profile-link invit_btn' %>
       <% end %>
     <% end %>
