--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <body>
     <nav class="nav">
       <%= link_to 'Stay in touch', root_path %>
+     <% if current_user %>
       <div class="menu">
         <div class="menu-item">
           <%= menu_link_to 'Timeline', posts_path %>
@@ -29,13 +30,15 @@
 
       </div>
 
-      <% if current_user %>
         <div>
           <%= link_to current_user.name, user_path(current_user), class: 'nav_user profile-link' %>
         </div>
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to 'Sign in', user_session_path %>
+	<div>
+         <%= link_to 'Sign in', user_session_path, class: "margin-right" %>
+	 <%= link_to 'Sign up', new_user_registration_path, class: "margin-right" %>
+	</div>
       <% end %>
     </nav>
     <% if notice.present? %>
